# bocchi

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md  dockerfile  systemd.sh
database/: init.sql
nginx/: nginx.conf
src/: main.rs
src/config/: database.rs
src/jobs/: yt_job.rs
src/models/: ig_model.rs  lib_model.rs
src/repositories/: lib_repository.rs
src/services/: ig_service.rs  lib_service.rs
src/utils/: fmt.rs
