[package]
name = "bocchi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "2.2.3"
error-chain = "0.12.4"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0.203", features = ["derive"] }
chrono = "0.4.23"
teloxide = { version = "0.12.0", features = ["macros"] }
rand = "0.8.5"
resvg = "0.43.0"
futures = "0.3.25"
env_logger = "0.11.3"
log = "0.4.0"
sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "sqlite"] }
cron = "0.12.1"
anyhow = "1.0"